--- a/index.html
+++ b/index.html
@@ -527,20 +527,19 @@
         </div>
         <div class="content-new-modal">
             <div class="content-question-event">
-							<b>1.- ¿Cuál es el horario de atención?</b>
+							<b>1.- Delivery</b>
 							<br><br>
-                            Aceptamos pedidos delivery desde: 
-                            <br>
-                            las 12 pm hasta las 11:15 pm
+                            De 12:00 pm. a 11.15 pm.
+
                             <br><br>
                             <b>2.- Reservas:</b>	
                             <br><br>
-                            Muy pronto, conoce nuestro primer local en Miraflores.
+                           Pronto en Miraflores, Street Mall 28 de julio, 2do Nivel
 							<br><br>
 							<b>3.- Promociones </b>
 							<br>
 							<div class="descuentos">
-                                Los Elegidos Oliver varía y es válido hasta agotar stock de 100 unidades. Puede variar sin previo aviso. Consulte en nuestras redes sociales.
+                                Los Elegidos del día, un plato de carta + bebida con 50% de descuento. Consulte nuestras redes sociales.
 
 							</div>
 						
