--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
 							<div id="answerOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="questionOne">
 									<div class="panel-body">
-											<p style="text-align: center;" >Muy pronto</p> <!-- <img src="images/trattoria-panel-body.f2af7f6d.svg"><br> --> 
+											<p style="text-align: center;" >Pronto en Miraflores, Street Mall 28 de julio, 2do Nivel</p> <!-- <img src="images/trattoria-panel-body.f2af7f6d.svg"><br> --> 
 											<!-- <ul>
                                             <li>
                                          <b>Miraflores - Av. Angamos 1095
