--- a/index.html
+++ b/index.html
@@ -528,19 +528,19 @@
         <div class="content-new-modal">
             <div class="content-question-event">
 							<b>1.- Delivery</b>
-							<br><br>
-                            De 12:00 pm. a 11.15 pm.
-
-                            <br><br>
-                            <b>2.- Reservas:</b>	
-                            <br><br>
-                           Pronto en Miraflores, Street Mall 28 de julio, 2do Nivel
-							<br><br>
+                            <div class="descuentos">
+                                De 12:00 pm. a 11.15 pm.
+							</div>
+                            <br>
+                            <b>2.- Reservas:</b>
+                            <div class="descuentos">
+                                Pronto en Miraflores, Street Mall 28 de julio, 2do Nivel
+                            </div>
+                            <br>
 							<b>3.- Promociones </b>
 							<br>
 							<div class="descuentos">
                                 Los Elegidos del día, un plato de carta + bebida con 50% de descuento. Consulte nuestras redes sociales.
-
 							</div>
 						
 							
@@ -628,7 +628,7 @@
 
         .content-new-modal{
             overflow-y: auto;
-             height: 330px;
+             height: 250px;
         }
 
         .content-new-delivery{
