--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 
     <div class="overlay-new-2" id="overlay-new-2">
     <div class="modal-new-2" id="modal-new-2">
-        <button class="modal-close-btn-new-2" id="close-btn-new-3" ><span  title="close">x</span></button>
+       <!--  <button class="modal-close-btn-new-2" id="close-btn-new-3" ><span  title="close">x</span></button> -->
         <div class="title-new-modal-2">
            <b>Preguntas Frecuentes</b>
         </div>
@@ -913,6 +913,10 @@
                 padding-top: 6px;
             }
 
+            .content-direcion, .descuentos {
+                padding-left: 25px;
+            }
+
 
         }
         @media screen and (max-width: 480px) {
@@ -938,6 +942,10 @@
                 width: 253px;
                 margin: auto;
             }
+
+            .content-direcion, .descuentos {
+                padding-left: 23px;
+            }
            
 
         }
@@ -951,7 +959,7 @@
                 font-size: 18px;
             }
             .content-direcion, .descuentos {
-                padding-left: 14px;
+                padding-left: 25px;
             }
         }
 
