--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 	
 
 	
-    <meta charset=utf-8> <title>Oliver</title> <meta name=description content="">
+    <meta charset=utf-8>
+     <title>Oliver</title> 
+    <meta name=description content="Oliver">
      <meta name=viewport content="width=device-width,initial-scale=1"> 
      <meta http-equiv=X-UA-Compatible content="IE=edge;"> 
      <!-- Facebook Open Graph tags --> 
@@ -86,7 +88,8 @@
      <meta property=og:image content="images/oliver-favicon-.png"> 
      <!-- Facebook Open Graph tags -->
       <link rel="shortcut icon" href=images/oliver-favicon-.png>
-       <style type=text/css>#loader-wrapper
+       <style type=text/css>
+       #loader-wrapper
         {
 
 			position: absolute;
